# LearningOpenCV

./: .gitignore  CMakeLists.txt
Chapter 1/: CMakeLists.txt  main.cpp
Chapter 2/: CMakeLists.txt  main.cpp
Chapter 3/: CMakeLists.txt  main.cpp
Chapter 4/: CMakeLists.txt  main.cpp
Chapter 5/: CMakeLists.txt  main.cpp
Chapter 6/: CMakeLists.txt  main.cpp
Chapter 7/: CMakeLists.txt  main.cpp
Chapter 8/: CMakeLists.txt  main.cpp
Project 1/: CMakeLists.txt  main.cpp
Project 2/: CMakeLists.txt  main.cpp
Project 3/: CMakeLists.txt  main.cpp
