cmake_minimum_required(VERSION 3.8)

project("LearnOpenCV")

add_subdirectory("Chapter 1")
add_subdirectory("Chapter 2")
add_subdirectory("Chapter 3")
add_subdirectory("Chapter 4")
add_subdirectory("Chapter 5")
add_subdirectory("Chapter 6")
add_subdirectory("Chapter 7")
add_subdirectory("Chapter 8")
add_subdirectory("Project 1")
add_subdirectory("Project 2")
add_subdirectory("Project 3")